--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
+arabic-reshaper==2.1.3
 asgiref==3.2.10
+backcall==0.2.0
 cairocffi==1.2.0
 CairoSVG==2.5.0
 cffi==1.14.4
 cssselect2==0.4.1
+decorator==5.0.9
 defusedxml==0.6.0
 Django==3.1.1
 django-quill-editor==0.1.16
 django-widget-tweaks==1.4.8
-django-wkhtmltopdf==3.3.0
+future==0.18.2
 html5lib==1.1
-pdfkit==0.6.1
+ipython==7.25.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+matplotlib-inline==0.1.2
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.0.1
 pip-upgrade==0.0.6
+prompt-toolkit==3.0.19
+ptyprocess==0.7.0
 pycparser==2.20
+Pygments==2.9.0
 Pyphen==0.10.0
+python-bidi==0.4.2
 pytz==2020.4
+reportlab==3.5.68
 six==1.15.0
 sqlparse==0.4.1
 tinycss2==1.1.0
-WeasyPrint==52.2
+traitlets==5.0.5
+wcwidth==0.2.5
 webencodings==0.5.1
+xhtml2pdf==0.2.5
